@@ -1,3 +1,8 @@
+2005-03-15  Sushma Rai  <rsushma@novell.com>
+
+	* shell/e-folder-misc-dialogs.c (do_foreign_folder_dialog): Fixed the
+	way e-mail ids were being read from the user name entry.
+
 2005-03-14  Sivaiah Nallagatla <snallagatla@novell.com>
 
 	* addresbook/e-book-backend-excahnge.c
